--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 20px 20px 0 20px;
     background-image: url("purple-space.gif");
     background-repeat: no-repeat;
     background-size: cover;
