--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 20px 20px 0 20px;
     background-image: url("purple-space.gif");
-    background-repeat: no-repeat;
+/*     background-repeat: no-repeat; */
     background-size: cover;
     text-align: center;
     
